// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Classic Data Set Success scenarios should create a classic partitioned data set 1`] = `
"================Z/OS FILES CREATE DATA-SET-CLASSIC===============
Data set created successfully.
"
`;

exports[`Create Classic Data Set Success scenarios should create a classic partitioned data set and print attributes 1`] = `
"================Z/OS FILES CREATE DATA-SET-CLASSIC ===============
{
  \\"success\\": true,
  \\"exitCode\\": 0,
  \\"message\\": \\"\\",
  \\"stdout\\": \\"Data set created successfully.\\\\n\\",
  \\"stderr\\": \\"\\",
  \\"data\\": {
    \\"success\\": true,
    \\"commandResponse\\": \\"Data set created successfully.\\"
  }
}"
`;

exports[`Create Classic Data Set Success scenarios should create a classic partitioned data set with specified primary allocation 1`] = `
"================Z/OS FILES CREATE DATA-SET-CLASSIC===============
alcunit:   CYL
dsorg:     PO
primary:   20
recfm:     FB
blksize:   6160
lrecl:     80
dirblk:    25
secondary: 1

Data set created successfully.
"
`;

exports[`Create Classic Data Set Success scenarios should create a classic partitioned data set with specified primary and secondary allocation 1`] = `
"================Z/OS FILES CREATE DATA-SET-CLASSIC===============
alcunit:   CYL
dsorg:     PO
primary:   20
recfm:     FB
blksize:   6160
lrecl:     80
dirblk:    25
secondary: 5

Data set created successfully.
"
`;

exports[`Create Classic Data Set Success scenarios should create a classic partitioned data set with specified size 1`] = `
"================Z/OS FILES CREATE DATA-SET-CLASSIC===============
alcunit:   CYL
dsorg:     PO
primary:   2
recfm:     FB
blksize:   6160
lrecl:     80
dirblk:    25
secondary: 0

Data set created successfully.
"
`;

exports[`Create Classic Data Set without profiles should create a classic partitioned data set 1`] = `
"Data set created successfully.
"
`;
